--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "bsl",
   "description": "Cube HTML5 Framework for Mobile",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "author": {
     "name": "Justin Yip",
     "email": "justin.yip@foxmail.com"
@@ -14,6 +14,7 @@
     "bsl" : "./bin/cli.js"
   },
   "dependencies": {
+    "express": "*",
     "mkdirp": "~0.3.4",
     "commander": "0.6.1",
     "ncp": "0.4.2",
