--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "bsl",
-  "description": "Cube HTML5 Framework for Mobile",
-  "version": "1.1.2",
+  "description": "Bsl HTML5 Framework for Mobile",
+  "version": "1.1.3",
   "author": {
     "name": "Justin Yip",
     "email": "justin.yip@foxmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yezhiming/cube-sdk.git"
+    "url": "https://github.com/yezhiming/bsl.git"
   },
   "bin": {
     "bsl" : "./bin/cli.js"
